--- a/.gitignore
+++ b/.gitignore
@@ -32,12 +32,4 @@
 *.app
 
 # Visual Studio Code
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-*.code-workspace
-
-# Local History for Visual Studio Code
-.history/
+.vscode/
